kubernetes/dndevops/dndevops-events.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dndevops-events
  namespace: dndevops
  labels:
    app: dndevops-events
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dndevops-events
  template:
    metadata:
      labels:
        app: dndevops-events
    spec:
      containers:
        - name: dndevops-events
          image: dndevops
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: dndevops-events-service
  namespace: dndevops
spec:
  selector:
    app: dndevops-events
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: "http"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dndevops-events-ingress
  namespace: dndevops
spec:
  ingressClassName: nginx
  rules:
    - host: dndevops.laurens.me
      http:
        paths:
          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: dndevops-events-service
                port:
                  number: 8000
