kubernetes/dndevops/dndevops-identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dndevops-identity
  namespace: dndevops
  labels:
    app: dndevops-identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dndevops-identity
  template:
    metadata:
      labels:
        app: dndevops-identity
    spec:
      containers:
        - name: dndevops-identity
          image: ghcr.io/roguebit2002/dndevops:0.0.2-dev
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limit:
              cpu: "400m"
              memory: "600Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: dndevops-identity-service
  namespace: dndevops
spec:
  selector:
    app: dndevops-identity
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: "http"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dndevops-identity-ingress
  namespace: dndevops
spec:
  ingressClassName: nginx
  rules:
    - host: dndevops.laurens.me
      http:
        paths:
          - path: /api/identity
            pathType: Prefix
            backend:
              service:
                name: dndevops-identity-service
                port:
                  number: 8000
