kubernetes/dndevops/smtp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  namespace: dndevops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
        - name: mailpit
          image: axllent/mailpit:latest
          ports:
            - containerPort: 1025  # SMTP Port
            - containerPort: 8025  # HTTP Web UI Port
---
apiVersion: v1
kind: Service
metadata:
  name: smtp-service
  namespace: dndevops
spec:
  selector:
    app: mailpit
  ports:
    - protocol: TCP
      port: 25
      targetPort: 1025
      name: "smtp"
    - protocol: TCP
      port: 8000
      targetPort: 8025
      name: "web-ui"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit-ingress
  namespace: dndevops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dndevops.laurens.me
      http:
        paths:
          - path: /mail(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: smtp-service
                port:
                  number: 8000
